fix header wrap on phones

--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -93,7 +93,6 @@ header p.professional-links a {
         flex-direction: row;
         justify-content: center;
         flex-wrap: wrap;
-        justify-content: center;
     }
     nav a {
         margin-left: 1em;
@@ -101,6 +100,8 @@ header p.professional-links a {
 
     header p.professional-links {
         flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
     }
 
     header hr {
@@ -110,7 +111,7 @@ header p.professional-links a {
     header p.professional-links a {
         margin-left: 1em;
         margin-right: 1em;
-        flex-wrap: wrap;
+        flex-wrap: nowrap;
         justify-content: center;
     }
 }
